update image source

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#services" class=" px-3 py-2 rounded-md text-lg font-medium">Services</a>
                     <div class="hidden md:block mx-8">
                         <a href="https://floorthree.ca">
-                            <img class="h-16 w-auto" src="/assets/images/floorthree-64.png" alt="Floor Three">
+                            <img class="h-16 w-auto" src="./assets/images/floorthree-64.png" alt="Floor Three">
                         </a>
                     </div>
                     <a href="#articles" class="px-3 py-2 rounded-md text-lg font-medium">Articles</a>
@@ -34,7 +34,7 @@
             <div class="w-full justify-center items-center">
                 <div class="md:hidden mx-8 mt-16 mb-20">
                     <a href="https://floorthree.ca">
-                        <img class="h-16 w-auto m-auto" src="/assets/images/floorthree-64.png" alt="Floor Three">
+                        <img class="h-16 w-auto m-auto" src="./assets/images/floorthree-64.png" alt="Floor Three">
                     </a>
                 </div>
                 <div class="text-center justify-center items-center sm:mt-32">
@@ -59,17 +59,17 @@
                             <div class="w-2/5 self-center pr-4">
                                 <!-- left -->
                                 <div class="about-img1 rounded-lg overflow-hidden">
-                                    <img class="w-full h-full object-cover object-bottom" src="/assets/images/about-img1.jpg" alt="">
+                                    <img class="w-full h-full object-cover object-bottom" src="./assets/images/about-img1.jpg" alt="">
                                 </div>
                             </div>
                             <div class="w-3/5">
                                 <!-- right:top -->
                                 <div class="about-img2 rounded-lg overflow-hidden">
-                                    <img class="w-full h-full object-cover object-center" src="/assets/images/about-img2.jpg" alt="">
+                                    <img class="w-full h-full object-cover object-center" src="./assets/images/about-img2.jpg" alt="">
                                 </div>
                                 <!-- right:bottom -->
                                 <div class="about-img3 rounded-lg overflow-hidden mt-5 w-3/4">
-                                    <img class="w-full h-full object-cover object-center" src="/assets/images/about-img3.jpg" alt="">
+                                    <img class="w-full h-full object-cover object-center" src="./assets/images/about-img3.jpg" alt="">
                                 </div>
                             </div>
                         </div>
@@ -164,11 +164,11 @@
                     </div>
                     <div class="w-full sm:w-4/6 sm:pl-12">
                         <div class="partners">
-                            <div><img class="m-6 azure" src="/assets/images/partner-azure.png" alt="Microsoft Azure" /></div>
-                            <div><img class="m-6 shopify" src="/assets/images/partner-shopify.png" alt="Shopify Plus" /></div>
-                            <div><img class="m-6 aws" src="/assets/images/partner-aws.png" alt="Amazon AWS" /></div>
-                            <div><img class="m-6 wordpress" src="/assets/images/partner-wordpress.png" alt="Wordpress" /></div>
-                            <div><img class="m-6 riskified" src="/assets/images/partner-riskified.png" alt="Riskified" /></div>
+                            <div><img class="m-6 azure" src="./assets/images/partner-azure.png" alt="Microsoft Azure" /></div>
+                            <div><img class="m-6 shopify" src="./assets/images/partner-shopify.png" alt="Shopify Plus" /></div>
+                            <div><img class="m-6 aws" src="./assets/images/partner-aws.png" alt="Amazon AWS" /></div>
+                            <div><img class="m-6 wordpress" src="./assets/images/partner-wordpress.png" alt="Wordpress" /></div>
+                            <div><img class="m-6 riskified" src="./assets/images/partner-riskified.png" alt="Riskified" /></div>
                         </div>
                     </div>
                 </div>
